# CPE883-2025-02

./: .gitignore  .gitmodules  Dockerfile  README.md  config.yaml  docker-compose.yml  download_data.py  pyproject.toml  requirements.txt  rock_dataloader.py
benchmark/: collector.py
data/: README.md  download_cifar.sh  download_heart_disease.sh  download_mnist.sh  prepare_cifar.py  prepare_heart.py  prepare_mnist.py
dataloaders/: __init__.py  pyproject.toml
dataloaders/3W/: pyproject.toml
dataloaders/3W/loader/: __init__.py  test_loader.py
dataloaders/CEEMDAN/: collector.py
dataloaders/NLPLoader/: .gitignore  README.md  pyproject.toml  train_example.py
dataloaders/NLPLoader/nlp_loader/: loader.py
dataloaders/TemplateLoader/: pyproject.toml
dataloaders/TemplateLoader/template_loader/: test_loader.py
dataloaders/benchmark/: collector.py
dataloaders/benchmark/3w_dataset/: demo_1_benchmark_impact_of_using_simulated_and_hand-drawn_instances.ipynb
dataloaders/heart_dataloaders/: __init__.py  pyproject.toml
dataloaders/heart_dataloaders/heart_dataloaders/: __init__.py  download_heart_disease.sh  heart.py  prepare_heart.py
dataloaders/rings-loader/: README.md  pyproject.toml
dataloaders/rings-loader/rings_loader/: __init__.py
dataloaders/rock_seg_loader/: README.md  pyproject.toml
dataloaders/rock_seg_loader/rock_seg_loader/: rock_dataset_multi.py
dataloaders/rock_seg_loader/tests/: fake_dataset.rar  test_loader.py  visualize_dataset.ipynb
dataloaders/tfrecord-loader/: pyproject.toml
dataloaders/tfrecord-loader/tfrecord_loader/: __init__.py
experiments/CKAN/: run_experiment.py
experiments/CapsNet/: demo_dataloader.py  run_experiment.py
experiments/KANExperiments/: .dockerignore  Dockerfile  heart_kan.py  pyproject.toml
experiments/KANExperiments/KANExperiments/: heart_kan.py
experiments/MNIST/: pyproject.toml
experiments/MNIST/test_data/: mnist_test.py
experiments/NLPExperiments/: .gitignore  Dockerfile  README.md  sample_bert.py  sample_diffusion.py  sample_gpt.py  train.py
experiments/NLPExperiments/config/: train_shakespeare_char.py  train_shakespeare_char_bert.py
experiments/ResNet_Baseline/: run_experiment.py
experiments/TKAT/: Dockerfile  README.md  TKAT.py  TKAT_class.py  TKAT_reg.py  buid_image.sh  pyproject.toml
experiments/TemplateExperiment/: Dockerfile  README.md  build_image.sh  pyproject.toml  requirements.in  requirements.txt
experiments/TemplateExperiment/template_experiment/: cli.py
experiments/VIDEO/: preprocessing.py
experiments/ckan_rockSeg_experiment2/: main.py  pyproject.toml  readme.md
experiments/ckan_rockSeg_experiment2/rock_seg_experiment2/: model.py
experiments/ckan_rockSeg_experiment2/rock_seg_loader/: __init__.py
experiments/ckan_simple_experiment1/: README.md  pyproject.toml
experiments/ckan_simple_experiment1/ckan_simple_experiment1/: cli.py  model.py
experiments/ckan_simple_experiment1/rock_class_loader/: rock_dataset_multi.py
experiments/electron-classification/: .gitignore  Dockerfile  generate_fake_rings.py  pyproject.toml  read_tfrecord.ipynb
experiments/electron-classification/electron_classification/: cli.py  data.py  data_faker.py  faker.py  kan.py  misc.py  mlp.py  tfrecord.py
experiments/munaro/: Dockerfile  README.md  main.py  run.sh
kan/: Dockerfile  docker-compose.yml  generate_fake_rings.py  requirements.txt
kan/utils/: data_faker.py  misc.py  tfrecord.py
models/: README..md
models/KAN/: kan.py
models/NLPModels/: README.md  pyproject.toml  requirements.txt
models/NLPModels/nanoBERT/: model.py  sample.py  train.py
models/NLPModels/nanoBERT/config/: train_shakespeare_char.py
models/NLPModels/nanoBERT/data/shakespeare_char/: prepare.py
models/NLPModels/nanoGPT/: model.py  train.py
models/NLPModels/nanoGPT/config/: train_shakespeare_char.py
models/NLPModels/nanos/: .gitignore  models.py  pyproject.toml
models/NLPModels/rational_kat_cu/example/: mnist.py
models/TemplateModel/template_model/: loader.py
models/attention/attention_model/: model.py  ts_model.py
models/classification-kan/: pyproject.toml
models/classification-kan/classification_kan/: kan.py  kan_classifier.py
modules/DataLoader/: dataloader.py
modules/DataLoader/test/: test_dataset_class.py
modules/Dataloaders/: README..md
modules/Dataloaders/MNIST_dataloaders/: mnist.py
modules/Dataloaders/yousub_dataloaders/: video_dataset.py
modules/Evaluation/: evaluator.py
modules/Models/: pyproject.toml
modules/Preprocessing/: transforms.py
modules/Utils/: utils.py
modules/models/CKAN/: ckan.py
modules/models/CKAN/kan_lib/: KANConv.py  KANLinear.py
modules/models/ResNet_Baseline/: resnetbaseline.py
