[project]
name = "3w-dataloader"
version = "0.1.0"
description = "Data loader for the 3W Dataset: utilities for loading and preprocessing offshore oil well event data."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy==1.26.4",
    "torch==2.7.1",
    "notebook==7.3",
    "alive-progress==3.2",
    "h5py==3.13",
    "matplotlib==3.8",
    "natsort==8.4",
    "pandas==1.5.3",
    "plotly==6.0",
    "pydantic==2.10",
    "scikit-learn==1.6",
    "seaborn==0.13",
    "tslearn==0.6",
    "ydata-profiling==4.15",
    "numba==0.61",
    "missingno==0.5",
    "pyarrow==19.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]
