[project]
name = "nlp_loader"
version = "0.1.0"
description = "This is a package to load NLP datasets"
readme = "README.md"
dependencies = [
    "numpy",
    "torch",
    "tiktoken",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"