[project]
name = "MNIST"
version = "0.1.0"
description = "Python package and scripts for experiments related to MNIST dataset"
readme = "README.md"
requires-python = ">=3.10,<=3.13.3"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pillow>=11.2.1",
]

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "test_data",
]
