[project]
name = "electron-classification"
version = "0.1.0"
description = "Code for classifying electorns in a particle physics experiment."
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "pandas>=2.3.1",
    "tfrecord-loader",
]

[project.scripts]
electron-classification = "electron_classification.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
tfrecord-loader = { path = "../../dataloaders/tfrecord-loader", editable = true }
