[project]
name = "electron-classification"
version = "0.1.0"
description = "Code for classifying electorns in a particle physics experiment."
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "jupyterlab>=4.4.4",
    "pandas>=2.3.1",
    "rings-loader",
    "torch==2.7.1",
    "typer>=0.16.0",
    "classification-kan",
    "mlflow>=3.1.1",
    "lightning>=2.5.2",
]

[project.scripts]
electron-classification = "electron_classification.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
rings-loader = { path = "../../dataloaders/rings-loader", editable = true }
classification-kan = { path = "../../models/classification-kan", editable = true }
